Added redis to save user access token. Changed Role to enum.